Navbar component updated, styles added for nav and eventcard

--- a/src/styles/eventcard.css
+++ b/src/styles/eventcard.css
@@ -24,12 +24,13 @@
   position: relative;
   overflow: hidden;
   /* height: 0; */
-  padding-bottom: 56.25%;
+  /* padding-bottom: 56.25%; */
 }
 
 .eventcard-item-img {
   object-fit: cover;
   height: 100%;
+  width: 100%;
 }
 
 .eventcard-item-header {
@@ -73,6 +74,7 @@
   .eventcard-grid-item {
     width: 50%;
     min-width: 50%;
+    margin-bottom: 50px;
   }
 
   .eventcard-item-content {
