--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -114,6 +114,7 @@
 .navbar-icon-search {
   font-size: 20px;
   border: none;
+  padding: 10px 0 10px 3px;
 }
 
 .navbar-icon-arrowdown {
@@ -121,34 +122,25 @@
   font-size: 15px;
 }
 
-.navbar-logo-text {
+.navbar-logo-container {
   text-decoration: none;
-  font-size: 2.5vw;
   display: flex;
   align-items: center;
 }
 
-.navbar-logo-text span {
+.navbar-logo-container img {
+  max-width: 40px;
+  max-height: 40px;
+  width: 100%;
+}
+
+.navbar-logo-container span {
+  font-size: 15px;
   padding-left: 10px;
 }
 
 /* DESKTOP STUFF */
 
-@media (min-width: 768px) {
-  .navbar-hamburger a {
-    display: none;
-  }
-
-  .navbar-item-link {
-    display: unset;
-    font-size: 14px;
-    text-decoration: none;
-  }
-
-  .navbar-dropdown-content {
-    min-width: 160px;
-  }
-}
 @media (min-width: 500px) {
   .navbar-dropdown-content {
     min-width: 160px;
@@ -164,5 +156,21 @@
     display: unset;
     font-size: 14px;
     text-decoration: none;
+  }
+
+  .navbar-logo-container img {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .navbar-logo-container span {
+    font-size: 20px;
+    padding: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .navbar-logo-container span {
+    font-size: 40px;
   }
 }
