styling for eventcard, search, single listing and edit listing

--- a/src/styles/eventcard.css
+++ b/src/styles/eventcard.css
@@ -68,8 +68,8 @@
 }
 
 .eventcard-tag:hover {
-  /* background-color: #4c4c4c; */
-  color: #fff;
+  background-color: #4c4c4c;
+  /* color: #fff; */
 }
 
 .eventcard-grid-item {
