--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,10 +21,12 @@ a {
   margin-right: -12px;
 }
 
-.collection {
+/* TODO: collection delete? */
+
+/* .collection {
   padding-bottom: 26px;
   margin-bottom: 26px;
-}
+} */
 
 input:focus,
 select:focus,
@@ -58,7 +60,37 @@ button:focus {
   opacity: 1; /* Firefox */
 }
 
+.form-submit-button {
+  width: 100%;
+  margin: 12px 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  padding: 13px 24px;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #fff;
+  text-decoration: none;
+  -webkit-transition: color 0.1s;
+  -moz-transition: color 0.1s;
+  -ms-transition: color 0.1s;
+  -o-transition: color 0.1s;
+  transition: color 0.1s;
+  cursor: pointer;
+}
+
+.form-submit-button:hover {
+  background-color: #ccc;
+  border-color: #ccc;
+}
+
 label {
   font-size: 0;
   display: none;
+}
+
+@media (min-width: 768px) {
+  .form-submit-button {
+    width: auto;
+  }
 }
