--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,10 @@ a {
   margin-top: 100px;
 }
 
+.hide {
+  display: none;
+}
+
 .ehorizon-grid {
   display: -webkit-box;
   display: -webkit-flex;
