form styling, profile and dashboard styling. datepicker styles not the best but functional

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -39,9 +39,9 @@
   line-height: 16px;
   padding: 10px 24px;
   margin-bottom: 10px;
-  background-color: #717171;
+  background-color: #ccc;
   color: #000;
-  border: 1px solid #717171;
+  border: 1px solid #ccc;
   text-decoration: none;
   -webkit-transition: color 0.1s;
   -moz-transition: color 0.1s;
