--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,10 +64,19 @@ button:focus {
 .form-input-space-between {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .form-date-input {
-  padding-right: 100px;
+  padding-right: 50px;
+}
+
+.event-banner-input {
+  color: #717171;
+}
+
+.event-banner-input:hover {
+  color: #fff;
 }
 
 .form-submit-button {
@@ -77,9 +86,9 @@ button:focus {
   font-size: 14px;
   line-height: 16px;
   padding: 13px 24px;
-  background-color: #fff;
+  background-color: #ccc;
   color: #000;
-  border: 1px solid #fff;
+  border: 1px solid #ccc;
   text-decoration: none;
   -webkit-transition: color 0.1s;
   -moz-transition: color 0.1s;
@@ -90,8 +99,8 @@ button:focus {
 }
 
 .form-submit-button:hover {
-  background-color: #ccc;
-  border-color: #ccc;
+  background-color: #fff;
+  border-color: #fff;
 }
 
 label {
@@ -99,6 +108,9 @@ label {
   display: none;
 }
 
+.no-events-message {
+  margin-left: 12px;
+}
 @media (min-width: 768px) {
   .form-submit-button {
     width: auto;
